# tempered

./: .travis.yml  README.md  plated.cabal  stack.yaml  tempered.cabal
app/: Main.hs
examples/: env.yaml  favourites.py  footer.md  gitprofile.md  simple.md  use-scripts.md
examples/templates/: simple.md
src/Plated/: Command.hs  Options.hs  Parser.hs  Template.hs  Yaml.hs
src/Tempered/: Options.hs  Parser.hs  Template.hs
tools/: attach-binary.sh
