name:                plated
version:             0.1.0.0
synopsis: A dead-simple shell interpolation templating utility
-- description: A dead-simple shell interpolation templating utility
homepage:            https://github.com/ChrisPenner/plated#readme
license:             BSD3
license-file:        LICENSE
author:              Chris Penner
maintainer:          christopher.penner@gmail.com
copyright:           2017 Chris Penner
category:            Templating
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Plated.Template
                     , Plated.Parser
                     , Plated.Options
  build-depends:       base >= 4.9 && < 5
                     , containers
                     , directory
                     , filepath
                     , mtl
                     , parsec
                     , process
                     , yaml
  default-language:    Haskell2010

executable plated
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base >= 4.9 && < 5
                     , directory
                     , mtl
                     , plated
                     , containers
  default-language:    Haskell2010

test-suite plated-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , plated
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/ChrisPenner/plated
